--- a/index.html
+++ b/index.html
@@ -8,20 +8,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="a">
-    <div class="a1"></div>
-    <div class="a2"></div>
-    <div class="a3"></div>
+  <div class="turn">
   </div>
-  <div class="b">
-    <div class="b1"></div>
-    <div class="b2"></div>
-    <div class="b3"></div>
-  </div>
-  <div class="c">
-    <div class="c1"></div>
-    <div class="c2"></div>
-    <div class="c3"></div>
+  <div class="board">
   </div>
   <script src="app.js"></script>
 </body>
